--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-Flask==2.3.3
-Werkzeug==2.3.7
+Flask==3.0.0
+Flask-Mail==0.10.0
+captcha==0.5.0
+Pillow==10.1.0
 gunicorn==21.2.0
+Werkzeug==3.0.1
+Jinja2==3.1.2
+ItsDangerous==2.1.2
+MarkupSafe==2.1.3
+click==8.1.7
+blinker==1.7.0
